--- a/styles/main.less
+++ b/styles/main.less
@@ -21,7 +21,7 @@
 @baseline: 20px;
 @shadow-color: desaturate(darken(@custom-color, 35%), 20%);
 @populr-theme-version: 1;
-@footer-background-color:#333333;
+@footer-background-color:#0B7ABF;
 @fr-button-color:#EEEEEE;
 
 #reset > .global-reset();
@@ -39,10 +39,72 @@
   padding-top: 20px;
 }
 
-#pop-logo{
-    padding:0 10px;
-    background-color:#666;
-    .border-radius(4px);
+#pop-parent-for-bg {
+  width: 100%;
+  max-height: 280px;
+  min-height: 20px;
+  text-align: center;
+  background: #333 url("@{base-url}/images/background-image.png") no-repeat center;
+  background-size: cover;
+  //  to fill the full width
+  padding-left: @baseline;
+  padding-right: @baseline;
+  margin-top: -@baseline;
+  margin-left: -@baseline;
+  //  fix for custom background
+  div.fullbg-container img {
+    width: 100% !important;
+  }
+
+  &:before {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+    margin-right: -0.25em; /* Adjusts for spacing */
+
+    /* For visualization
+    background: #808080; width: 5px;
+    */
+  }
+  #pop-logo {
+    display: inline-block;
+    vertical-align: middle;
+    width: 360px;
+    height: 260px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+
+}
+
+div#pop-parent-for-title-links {
+  min-height: 80px;
+}
+#pop-parent-for-title-links {
+  position: relative;
+  //  to fill the full width
+  margin-left: -@baseline;
+  background-color: #1D1D1D;
+  margin-bottom: @baseline;
+  height: 80px;
+  width: 1080px;
+  display: table;
+  #pop-title {
+    padding-left: 70px;
+    display: table-cell;
+    vertical-align: middle;
+
+
+    color: #d2d2d2;
+    //  text-align: center;
+    .has-links & {
+      max-width: 680px;
+
+    }
+
+
+  }
 }
 
 #logo-pop-links{
@@ -65,11 +127,10 @@
 }
 
 body {
-  font-family: "Helvetica-Neue","Helvetica Neue", "HelveticaNeue-Light", "Helvetica Neue Light", Helvetica, Arial, "Lucida Grande", sans-serif; 
-  font-weight: 300;;
+  font-family: Verdana, sans-serif;
   font-weight: 300px;
-  font-size: 14px;
-  line-height: 1.57;
+  font-size: 12px;
+  line-height: 1.3;
   .text-color();
 }
 
@@ -81,20 +142,6 @@ em, i {
   font-style: italic;
 }
 
-#header-row{
-    width: auto;
-    background-color:#444444;
-    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.4);
-    padding:5px 0;
-    
-}
-
-#header {
-  margin: 0 auto;
-  width: @pop-width;
-  background:url("@{base-url}/images/invivo-logo.jpg") no-repeat top left;
-  min-height:40px;
-}
 
 #main-content {
   overflow: visible;
@@ -194,6 +241,7 @@ a, a:hover, a:visited, a:active {
 
 .asset {
   .asset-background();
+  border:1px solid #bbb;
 
   .asset-text {
     padding: @text-padding;
@@ -201,10 +249,11 @@ a, a:hover, a:visited, a:active {
 
   h2.asset-title {
     font-family: @headline-font-family;
-    font-size: 18px;
-    font-weight: 400;
+    font-size: 22px;
+    font-weight: 700;
     line-height: 1.5;
     margin-bottom: 0.5em;
+    color: #8F8F8F;
   }
 }
 
@@ -436,6 +485,49 @@ a, a:hover, a:visited, a:active {
                 }
             }
         }
+}
+
+/////////////////////////////////////
+//code for Nchamber customization
+
+#main-region {
+  background: @background-color;
+
+.asset-size-1 .asset-title {
+  background: #414142;
+  padding: 5px 30px;
+  margin:0 -30px 10px;
+  color: #fff;
+  position: relative;
+  font-size: 26px;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 400;
+
+
+  &:before {
+    content: '';
+    position: absolute;
+    border: 15px solid rgba(250, 13, 70, 0);
+    border-right-color: #BFC1C3;
+    bottom: -23px;
+    left: -15px;
+    z-index: 0;
+    border-bottom-width: 23px;
+    border-top-width: 0px;
+  }
+
+  &:after {
+    content: '';
+    position: absolute;
+    border: 15px solid rgba(250, 13, 70, 0);
+    border-left-color: #BFC1C3;
+    bottom: -23px;
+    right: -15px;
+    z-index: 0;
+    border-bottom-width: 23px;
+    border-top-width: 0px;
+  }
+}
 }
 
 @media screen and (max-width: 960px)  {
