--- a/styles/variables.less
+++ b/styles/variables.less
@@ -6,8 +6,9 @@
 
 @base-url: '..';
 @custom-color: #10546E;
-@background-color: #FFF;
+@background-color: #E0E0E0;
 // @footer-background-color: #2b2a2a;
-@headline-font-family: "Helvetica-Neue","Helvetica Neue", "HelveticaNeue-Light", "Helvetica Neue Light", Helvetica, Arial, "Lucida Grande", sans-serif;
-@headline-font-weight: 300;
+@import '//fonts.googleapis.com/css?family=Oswald:400,700';
+@headline-font-family: 'Oswald', sans-serif;
+@headline-font-weight: 700;
 // Add any additional variables for your theme here.
