--- a/styles/palette-default.less
+++ b/styles/palette-default.less
@@ -16,7 +16,7 @@
       text-decoration:none;
   }
 }
-
+@background-color: #E0E0E0;
 .asset-background() {
   background-color: #FFF;
   .box-shadow(0 0 0 rgba(0,0,0,0.6));
