--- a/styles/main.less
+++ b/styles/main.less
@@ -96,7 +96,8 @@
   #pop-title {
     padding:15px !important ;
     color: #d2d2d2;
-    //  text-align: center;
+    display: inline;
+
 
   }
 }
@@ -228,8 +229,6 @@ a, a:hover, a:visited, a:active {
 }
 
 
-//#main-region .columnizer-cols2 .columnizer-col:first-child .asset-type-imagegroup .asset-content.small{display:none!important;}
-//#main-region .columnizer-cols2 .columnizer-col:last-child .asset-type-imagegroup .asset-content.big{display:none!important;}
 
 .asset {
   .asset-background();
@@ -528,7 +527,7 @@ a, a:hover, a:visited, a:active {
     width: auto;
   }
   #pop-parent-for-title-links {
-    max-width: 720px;
+    max-width: 720px !important;
   }
   #main-region {
     max-width: 720px;
