--- a/styles/main.less
+++ b/styles/main.less
@@ -96,9 +96,6 @@
   #pop-title {
     padding:15px !important ;
     color: #d2d2d2;
-    display: inline;
-
-
   }
 }
 
@@ -110,7 +107,8 @@
 
     #pop-links{
         display: block;
-        margin: 10px auto;
+        margin:10px 10px;
+        text-align: center;
     }
 
 }
