--- a/styles/main.less
+++ b/styles/main.less
@@ -96,13 +96,14 @@
   #pop-title {
     padding:15px !important ;
     color: #d2d2d2;
+    width: 960px;
   }
 }
 
 .has-links #logo-pop-links{
     width: 960px;
     margin: 0 auto;
-    background-color:@footer-background-color;
+    background-color:none;
     padding-bottom: 20px;
 
     #pop-links{
