--- a/styles/main.less
+++ b/styles/main.less
@@ -32,7 +32,7 @@
 
 #main-region{
     width: 960px;
-    margin: 45px auto 0;
+    margin: 0 auto 0;
     border: 1px solid #ccc;
 
 }
@@ -92,13 +92,12 @@
 .has-title #pop-parent-for-title-links {
   position: relative;
   //  to fill the full width
-  background-color: #1D1D1D;
   margin: 0 auto;
   max-width: 960px;
   width: auto;
   #pop-title {
     padding:15px !important ;
-    color: #d2d2d2;
+    #populr > .text-color-over-color(@background-color);
     width: 960px;
   }
 }
