--- a/styles/main.less
+++ b/styles/main.less
@@ -76,6 +76,8 @@
 }*/
 #banner-region {
   position: relative;
+  max-width: 960px;
+  margin: 0 auto -25px;
   #pop-logo {
     //    display: inline-block;
     vertical-align: middle;
@@ -85,6 +87,29 @@
     top: 50px;
     left: -1px;
   }
+  .asset-type-imagegroup .asset-size-l {
+
+   .asset-title {
+     color: #d2d2d2 !important;
+     background: #1d1d1d !important;
+     margin: 0 -15px !important;
+     padding: 3px 15px !important;
+     font-size: 20px;
+
+   }
+    .slideshow.enabled {
+       margin-bottom: 0px !important;
+    }
+    .cycle-pager {
+      margin-left: -15px !important;
+      padding-left: 0 !important;
+      text-align: right !important;
+      color: ghostwhite !important;
+    }
+    .cycle-pager-active {
+      color: #0B7ABF !important;
+    }
+  }
 }
 
 
@@ -92,6 +117,7 @@
 .has-title #pop-parent-for-title-links {
   position: relative;
   //  to fill the full width
+  background-color: @background-color;
   margin: 0 auto;
   max-width: 960px;
   width: auto;
@@ -103,7 +129,7 @@
 }
 
 .has-links #logo-pop-links{
-    width: 960px;
+    max-width: 960px;
     margin: 0 auto;
     background-color:none;
     padding-bottom: 20px;
