--- a/styles/main.less
+++ b/styles/main.less
@@ -97,10 +97,11 @@
        margin-bottom: 0px !important;
     }
     .cycle-pager {
-      margin-left: -15px !important;
       padding-left: 0 !important;
       text-align: right !important;
       color: ghostwhite !important;
+      width: 30% !important;
+      margin-left: 65% !important;
     }
     .cycle-pager-active {
       color: #0B7ABF !important;
